Modifying the userimplemenetation class to enable the test pass